--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,9 +48,10 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/seeker"
-        android:layout_above="@+id/button"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="64dp" />
+        android:layout_below="@+id/button2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="67dp" />
 
     <Button
         android:layout_width="wrap_content"
